tests/snapshots/examples_fixtures/errors__invalid_float_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/errors/invalid_float_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify () -> Unit with () -> Unit with IO.

  --> examples/errors/invalid_float_error.flx:4:1
  |
4 | print(x);
  | ^^^^^^^^
  | -------- expected () -> Unit, found () -> Unit with IO


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/errors/invalid_float_error.flx:4:1
  |
4 | print(x);
  | ^^^^^^^^^
  | --------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/errors/invalid_float_error.flx:4:1
  |
4 | print(x);
  | ^^^^^^^^^
  | --------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.

Found 3 errors.
== stdout ==
<not executed>
